--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "aws s3 cp ./. s3://cloud-membership-shopping --recursive --profile=cloud"
   },
   "keywords": [],
   "author": "pabhoz",
